validation for register form and fixed alignment issues

--- a/src/pages/item-create/item-create.scss
+++ b/src/pages/item-create/item-create.scss
@@ -9,3 +9,11 @@
     text-align: center;
     vertical-align: bottom;
 }
+
+.item-md {
+  padding: 0px;
+}
+
+.text-input-md {
+  margin: 13px 0px 13px 0px;
+}
