--- a/src/pages/mylist/mylist.scss
+++ b/src/pages/mylist/mylist.scss
@@ -10,4 +10,7 @@ page-mylist {
     width: 100%;
     height: 3.6rem;
   }
+  .button-md {
+    margin: 0rem 0.2rem;
+  }
 }
