--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -9,3 +9,8 @@
     text-align: center;
     vertical-align: bottom;
 }
+
+.error {
+  color: #a91623;
+  padding-left: 0px;
+}
